syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.services.energy";
option java_outer_classname = "EnergyServiceImpl";

package Energy;

service EnergyService {
	// Unary
	rpc energyOnOff(SwitchRequest) returns (SwitchResponse) {};
}

message SwitchRequest {
	bool power = 1;
}

message SwitchResponse {
	bool power = 1;
}